internal/controller/testdata/postgresaccess/durable-identity/consists_of/networkpolicy.yaml
---
action: exclusiveCreateOrUpdate
matcher: Subset
object:
  apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    name: frode-orders-access-relay
    namespace: myteam
  spec:
    podSelector:
      matchLabels:
        cnpg.io/cluster: pg-orders-restore-15aaddee
        cnpg.io/instanceRole: primary
    policyTypes: [Ingress]
    ingress:
      - from:
          - namespaceSelector:
              matchLabels:
                kubernetes.io/metadata.name: nais-system
            podSelector:
              matchLabels:
                app.kubernetes.io/name: relay
                app.kubernetes.io/instance: relay
        ports:
          - protocol: TCP
            port: 5432
